# graph-trace

./: CHANGELOG.md  DebugPlugin.cabal  Main.hs  README.md  Test.hs  debug-plugin.cabal  graph-trace.cabal  run-exe  shell.nix
.github/workflows/: haskell-ci.yml
debug-visualizer/: Main.hs
exe/: CHANGELOG.md  Class.hs  Main.hs  exe.cabal
exe/app/: Class.hs  Main.hs
exe/breaking/: Main.hs
graph-trace/: CHANGELOG.md  graph-trace.cabal
graph-trace-dot/: CHANGELOG.md  graph-trace-dot.cabal
graph-trace-dot/app/: Main.hs
graph-trace-dot/src/Graph/Trace/: Dot.hs
graph-trace-viz/: CHANGELOG.md  Main.hs  graph-trace-viz.cabal
graph-trace-viz/app/: Main.hs
graph-trace-viz/extras/: header.html
graph-trace/src/Graph/: Trace.hs
graph-trace/src/Graph/Trace/Internal/: GhcFacade.hs  Instrument.hs  Predicates.hs  RuntimeRep.hs  Solver.hs  TH.hs  Trace.hs  Types.hs
src/: Debug.hs
src/Debug/Internal/: GhcFacade.hs  Trace.hs  Types.hs
