cabal-version:       >=1.10

name:                graph-trace
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- author:
maintainer:          aaronallen8455@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  default-language: Haskell2010
  exposed-modules:
    Debug
    Debug.Internal.GhcFacade
    Debug.Internal.Types
    Debug.Internal.Trace
  build-depends: base
               , ghc
               , ghc-prim
               , containers
               , syb
               , template-haskell
               , transformers
               , random
               , bytestring
  hs-source-dirs:      src
  ghc-options: -Wall

executable exe
  main-is:             Main.hs
  hs-source-dirs: exe
  other-modules: Class
  -- other-extensions:
  build-depends:       base
                     , graph-trace
                     , random
  -- hs-source-dirs:
  default-language:    Haskell2010

executable graph-trace-viz
  default-language: Haskell2010
  main-is: Main.hs
  build-depends: base
               , containers
               , bytestring
  hs-source-dirs: graph-trace-viz
