cabal-version:      2.4
name:               exe
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         aaron@flipstone.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable test-exe
  main-is:             Main.hs
  hs-source-dirs: app
  other-modules: Class
  -- other-extensions:
  build-depends:       base
                     , graph-trace
                     , random
  -- hs-source-dirs:
  default-language:    Haskell2010
--  ghc-options: -fplugin=Graph.Trace
