cabal-version:      2.4
name:               exe
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Test executable

-- A longer description of the package.
description: Test executable for @graph-viz@

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: MIT

-- The package author(s).
-- author:
maintainer:         aaron@flipstone.com

-- A copyright notice.
-- copyright:
category: testing
extra-source-files: CHANGELOG.md
tested-with: GHC==9.2.1, GHC==9.0.1, GHC==8.10.7

executable test-exe
  main-is:             Main.hs
  hs-source-dirs: app
  other-modules: Class
  -- other-extensions:
  build-depends:       base >= 4.9 && < 5
                     , graph-trace
                     , random
  -- hs-source-dirs:
  default-language:    Haskell2010
--  ghc-options: -fplugin=Graph.Trace
