cabal-version:      2.4
name:               graph-trace-dot
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         aaron@flipstone.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  default-language: Haskell2010
  exposed-modules: Graph.Trace.Dot
  build-depends: base
               , bytestring
               , containers
               , directory
               , attoparsec
  hs-source-dirs: src
  ghc-options: -Wall


executable graph-trace-dot
  default-language: Haskell2010
  main-is: Main.hs
  build-depends: base
               , bytestring
               , containers
               , directory
               , attoparsec
               , graph-trace-dot
  hs-source-dirs: app
  ghc-options: -Wall
