cabal-version:      2.4
name:               graph-trace
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         aaron@flipstone.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  default-language: Haskell2010
  exposed-modules:
    Graph.Trace
    Graph.Trace.Internal.GhcFacade
    Graph.Trace.Internal.Types
    Graph.Trace.Internal.Trace
  build-depends: base
               , ghc
               , ghc-prim
               , containers
               , syb
               , template-haskell
               , transformers
               , random
               , bytestring
  hs-source-dirs:      src
  ghc-options: -Wall
